@@ -117,7 +117,9 @@ The current choices are
 .I spec
 for the old spectral mapping,
 .I hot
-for a thermal scale, and
+for a thermal scale,
+.I eco
+for a blue-yellow-red scale, and
 .I pm3d
 for a variation of the default mapping,
 .I def.
@@ -148,6 +150,10 @@ To create a false color image directly from
 .I rpict(1):
 .IP "" .2i
 rpict \-vf default.vp scene.oct | falsecolor > scene.hdr
+.PP
+To show the available color palettes:
+.IP "" .2i
+falsecolor -palettes | ximage
 .PP 
 To create a logarithmic contour plot of illuminance values on a
 Radiance image:
@@ -163,7 +169,7 @@ Greg Ward
 Axel Jacobs (Perl translation and \-pal options)
 .SH "ACKNOWLEDGEMENT"
 Work on this program was initiated and sponsored by the LESO
-group at EPFL in Switzerland.
+group at EPFL in Switzerland. The 'eco' palette was sponsored by Foster + Partners in London.
 .SH "SEE ALSO"
 getinfo(1), pcomb(1), pcompos(1), pextrem(1), pfilt(1), pflip(1), protate(1),
 psign(1), rpict(1), ximage(1)
