@@ -1875,3 +1875,5 @@ to Lars Grobe for noticing the problem.
 
 Added -r option to gendaymtx to rotate the sky the specified number of
 degrees about the zenith as suggested by A. McNeil.
+
+Axel Jacobs added -pal eco color map that does a blue-to-yellow range.
